@@ -27,9 +27,9 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
-import org.apache.commons.lang3.RandomUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
@@ -81,11 +81,9 @@ import org.junit.experimental.categories.Category;
 import org.junit.rules.TestName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.apache.hbase.thirdparty.com.google.common.base.Joiner;
 import org.apache.hbase.thirdparty.com.google.protobuf.RpcController;
 import org.apache.hbase.thirdparty.com.google.protobuf.ServiceException;
-
 import org.apache.hadoop.hbase.shaded.protobuf.generated.RegionServerStatusProtos.RegionStateTransition.TransitionCode;
 import org.apache.hadoop.hbase.shaded.protobuf.generated.RegionServerStatusProtos.ReportRegionStateTransitionRequest;
 import org.apache.hadoop.hbase.shaded.protobuf.generated.RegionServerStatusProtos.ReportRegionStateTransitionResponse;
@@ -157,7 +155,8 @@ public class TestRegionMergeTransactionOnCluster {
       verifyRowCount(table, ROWSIZE);
 
       // Randomly choose one of the two merged regions
-      RegionInfo hri = RandomUtils.nextBoolean() ? mergedRegions.getFirst() : mergedRegions.getSecond();
+      RegionInfo hri = ThreadLocalRandom.current().nextBoolean() ? mergedRegions.getFirst() :
+        mergedRegions.getSecond();
       SingleProcessHBaseCluster cluster = TEST_UTIL.getHBaseCluster();
       AssignmentManager am = cluster.getMaster().getAssignmentManager();
       RegionStates regionStates = am.getRegionStates();
@@ -392,17 +391,30 @@ public class TestRegionMergeTransactionOnCluster {
       for (Pair<RegionInfo, ServerName> p : currentRegionToServers) {
         currentRegions.add(p.getFirst());
       }
-      assertTrue(initialRegions.contains(mergedRegions.getFirst())); //this is the first region
-      assertTrue(initialRegions.contains(RegionReplicaUtil
-        .getRegionInfoForReplica(mergedRegions.getFirst(), 1))); //this is the replica of the first region
-      assertTrue(initialRegions.contains(mergedRegions.getSecond())); //this is the second region
-      assertTrue(initialRegions.contains(RegionReplicaUtil
-        .getRegionInfoForReplica(mergedRegions.getSecond(), 1))); //this is the replica of the second region
-      assertTrue(!initialRegions.contains(currentRegions.get(0))); //this is the new region
-      assertTrue(!initialRegions.contains(RegionReplicaUtil.getRegionInfoForReplica(currentRegions.get(0), 1))); //replica of the new region
-      assertTrue(currentRegions.contains(RegionReplicaUtil.getRegionInfoForReplica(currentRegions.get(0), 1))); //replica of the new region
-      assertTrue(!currentRegions.contains(RegionReplicaUtil.getRegionInfoForReplica(mergedRegions.getFirst(), 1))); //replica of the merged region
-      assertTrue(!currentRegions.contains(RegionReplicaUtil.getRegionInfoForReplica(mergedRegions.getSecond(), 1))); //replica of the merged region
+      // this is the first region
+      assertTrue(initialRegions.contains(mergedRegions.getFirst()));
+      // this is the replica of the first region
+      assertTrue(initialRegions
+        .contains(RegionReplicaUtil.getRegionInfoForReplica(mergedRegions.getFirst(), 1)));
+      // this is the second region
+      assertTrue(initialRegions.contains(mergedRegions.getSecond()));
+      // this is the replica of the second region
+      assertTrue(initialRegions
+        .contains(RegionReplicaUtil.getRegionInfoForReplica(mergedRegions.getSecond(), 1)));
+      // this is the new region
+      assertTrue(!initialRegions.contains(currentRegions.get(0)));
+      // replica of the new region
+      assertTrue(!initialRegions
+        .contains(RegionReplicaUtil.getRegionInfoForReplica(currentRegions.get(0), 1)));
+      // replica of the new region
+      assertTrue(currentRegions
+        .contains(RegionReplicaUtil.getRegionInfoForReplica(currentRegions.get(0), 1)));
+      // replica of the merged region
+      assertTrue(!currentRegions
+        .contains(RegionReplicaUtil.getRegionInfoForReplica(mergedRegions.getFirst(), 1)));
+      // replica of the merged region
+      assertTrue(!currentRegions
+        .contains(RegionReplicaUtil.getRegionInfoForReplica(mergedRegions.getSecond(), 1)));
       table.close();
     } finally {
       TEST_UTIL.deleteTable(tableName);
